new ophiodon